tests/negative/Internal/InvalidCoercionType.juvix
module InvalidCoercionType;

trait
type T A := mkT {pp : A -> A};
open T using {mkT};

coercion instance
coe {A} : T A :=
  mkT@{
    pp (x : A) : A := x
  };
